--- a/BackJackRacer/Gemfile
+++ b/BackJackRacer/Gemfile
@@ -38,3 +38,9 @@ gem 'spring',        group: :development
 # Use debugger
 # gem 'debugger', group: [:development, :test]
 
+gem 'pg'
+gem 'bcrypt'
+
+group :development, :test do
+  gem 'rspec-rails'
+end
