--- a/BackJackRacer/Gemfile
+++ b/BackJackRacer/Gemfile
@@ -13,7 +13,7 @@ gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.0.0'
 # See https://github.com/sstephenson/execjs#readme for more supported runtimes
 # gem 'therubyracer',  platforms: :ruby
-
+gem 'bcrypt', '~> 3.1.7'
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
@@ -41,8 +41,14 @@ gem 'travis-lint'
 # gem 'debugger', group: [:development, :test]
 
 gem 'pg'
-gem 'bcrypt'
 
 group :development, :test do
-  gem 'rspec-rails'
+  gem 'factory_girl_rails'
+  gem 'rspec-rails', '~> 2.14.1'
+  gem 'faker'
+  gem 'capybara', '~> 2.2.1'
+  gem 'selenium-webdriver', '~> 2.38.0'
+  gem 'database_cleaner', '~> 1.2.0'
+  gem 'shoulda-matchers'
 end
+
