--- a/BackJackRacer/.gitignore
+++ b/BackJackRacer/.gitignore
@@ -22,3 +22,35 @@
 
 # Ignore Mac files
 .DS_Store
+.bundle
+Gemfile.lock
+gemfiles/*.lock
+
+## MAC OS
+.DS_Store
+.document
+
+## TEXTMATE
+*.tmproj
+tmtags
+
+## EMACS
+*~
+\#*
+.\#*
+
+## VIM
+*.swp
+
+## PROJECT::GENERAL
+coverage
+rdoc
+pkg
+tmp
+capybara*.html
+.rvmrc
+
+## PROJECT::SPECIFIC
+
+.yardoc
+doc
