--- a/BackJackRacer/.gitignore
+++ b/BackJackRacer/.gitignore
@@ -20,5 +20,36 @@
 *.idea
 *.iml
 
-# Ignore Mac files
+
+.bundle
+Gemfile.lock
+gemfiles/*.lock
+
+## MAC OS
 .DS_Store
+.document
+
+## TEXTMATE
+*.tmproj
+tmtags
+
+## EMACS
+*~
+\#*
+.\#*
+
+## VIM
+*.swp
+
+## PROJECT::GENERAL
+coverage
+rdoc
+pkg
+tmp
+capybara*.html
+.rvmrc
+
+## PROJECT::SPECIFIC
+
+.yardoc
+doc
